add sre and queue tools
