# internal/api/api.go
@@ -4,6 +4,13 @@ import (
 	"context"
 	"errors"
 
+	"github.com/ozonva/ova-place-api/internal/event"
+	"github.com/ozonva/ova-place-api/internal/metrics"
+	"github.com/ozonva/ova-place-api/internal/producer"
+
+	"github.com/ozonva/ova-place-api/internal/flusher"
+
+	"github.com/opentracing/opentracing-go"
 	"github.com/rs/zerolog/log"
 	"google.golang.org/grpc/codes"
 	"google.golang.org/grpc/status"
@@ -16,11 +23,24 @@ import (
 
 type api struct {
 	desc.UnimplementedOvaPlaceApiV1Server
-	repo repo.Repo
+	repo       repo.Repo
+	flusher    flusher.Flusher
+	producer   producer.Producer
+	cudCounter metrics.CudCounter
 }
 
-func NewOvaPlaceApi(repo repo.Repo) desc.OvaPlaceApiV1Server {
-	return &api{repo: repo}
+func NewOvaPlaceApi(
+	repo repo.Repo,
+	flusher flusher.Flusher,
+	producer producer.Producer,
+	cudCounter metrics.CudCounter,
+) desc.OvaPlaceApiV1Server {
+	return &api{
+		repo:       repo,
+		flusher:    flusher,
+		producer:   producer,
+		cudCounter: cudCounter,
+	}
 }
 
 func (a *api) CreatePlaceV1(
@@ -46,14 +66,87 @@ func (a *api) CreatePlaceV1(
 
 	id, err := a.repo.AddEntity(model)
 	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
 		return nil, status.Error(codes.Internal, "internal error")
 	}
+
+	model.ID = id
+
+	eventInstance, err := event.NewEvent("created", model)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, status.Error(codes.Internal, "internal error")
+	}
+
+	err = a.producer.Push("cud_events", eventInstance)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, status.Error(codes.Internal, "internal error")
+	}
+
+	a.cudCounter.SuccessfulCreates.Inc()
 
 	return &desc.PlaceV1{
 		PlaceId: id,
 		UserId:  model.UserID,
 		Seat:    model.Seat,
 		Memo:    model.Memo,
+	}, nil
+}
+
+func (a *api) MultiCreatePlaceV1(
+	ctx context.Context,
+	req *desc.MultiCreatePlaceRequestV1,
+) (*desc.MultiCreatePlaceResponseV1, error) {
+
+	span, ctx := opentracing.StartSpanFromContext(ctx, "multi_create_place")
+	defer span.Finish()
+
+	if err := req.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	log.Debug().
+		Msg("Multi create place called")
+
+	places := make([]models.Place, len(req.PlacesCreationData))
+
+	for index := range req.PlacesCreationData {
+		places[index] = models.Place{
+			UserID: req.PlacesCreationData[index].UserId,
+			Seat:   req.PlacesCreationData[index].Seat,
+			Memo:   req.PlacesCreationData[index].Memo,
+		}
+
+		eventInstance, err := event.NewEvent("create", places[index])
+		if err != nil {
+			log.Error().Err(err).Msg("Error from api")
+			return nil, status.Error(codes.Internal, "internal error")
+		}
+
+		err = a.producer.Push("cud_events", eventInstance)
+		if err != nil {
+			log.Error().Err(err).Msg("Error from api")
+			return nil, status.Error(codes.Internal, "internal error")
+		}
+	}
+
+	notSaved := a.flusher.Flush(ctx, places)
+
+	notSavedPlaces := make([]*desc.CreatePlaceRequestV1, len(notSaved))
+
+	for index := range notSaved {
+		notSavedPlaces[index] = &desc.CreatePlaceRequestV1{
+			UserId: notSaved[index].UserID,
+			Seat:   notSaved[index].Seat,
+			Memo:   notSaved[index].Memo,
+		}
+	}
+
+	a.cudCounter.SuccessfulCreates.Add(float64(len(places) - len(notSaved)))
+
+	return &desc.MultiCreatePlaceResponseV1{
+		NotAdded: notSavedPlaces,
 	}, nil
 }
 
@@ -72,6 +165,7 @@ func (a *api) DescribePlaceV1(
 
 	place, err := a.repo.DescribeEntity(req.PlaceId)
 	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
 		return nil, mapErrors(err)
 	}
 
@@ -99,11 +193,13 @@ func (a *api) ListPlacesV1(
 
 	totalCount, err := a.repo.TotalCount()
 	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
 		return nil, status.Error(codes.Internal, "internal error")
 	}
 
 	fetched, err := a.repo.ListEntities(req.PerPage, req.PerPage*(req.Page-1))
 	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
 		return nil, status.Error(codes.Internal, "internal error")
 	}
 
@@ -152,8 +248,23 @@ func (a *api) UpdatePlaceV1(
 
 	err := a.repo.UpdateEntity(req.PlaceId, model)
 	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
 		return nil, mapErrors(err)
 	}
+
+	eventInstance, err := event.NewEvent("updated", model)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, status.Error(codes.Internal, "internal error")
+	}
+
+	err = a.producer.Push("cud_events", eventInstance)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, status.Error(codes.Internal, "internal error")
+	}
+
+	a.cudCounter.SuccessfulUpdates.Inc()
 
 	return &desc.PlaceV1{
 		PlaceId: req.PlaceId,
@@ -176,10 +287,31 @@ func (a *api) RemovePlaceV1(
 		Uint64("PlaceId", req.PlaceId).
 		Msg("Remove place called")
 
-	err := a.repo.RemoveEntity(req.PlaceId)
+	model, err := a.repo.DescribeEntity(req.PlaceId)
 	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
 		return nil, mapErrors(err)
 	}
+
+	err = a.repo.RemoveEntity(req.PlaceId)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, mapErrors(err)
+	}
+
+	eventInstance, err := event.NewEvent("deleted", *model)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, status.Error(codes.Internal, "internal error")
+	}
+
+	err = a.producer.Push("cud_events", eventInstance)
+	if err != nil {
+		log.Error().Err(err).Msg("Error from api")
+		return nil, status.Error(codes.Internal, "internal error")
+	}
+
+	a.cudCounter.SuccessfulDeletes.Inc()
 
 	return &emptypb.Empty{}, nil
 }
