# pkg/ova-place-api/ova-place-api.pb.gw.go
@@ -67,6 +67,42 @@ func local_request_OvaPlaceApiV1_CreatePlaceV1_0(ctx context.Context, marshaler 
 
 }
 
+var (
+	filter_OvaPlaceApiV1_MultiCreatePlaceV1_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
+func request_OvaPlaceApiV1_MultiCreatePlaceV1_0(ctx context.Context, marshaler runtime.Marshaler, client OvaPlaceApiV1Client, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreatePlaceRequestV1
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OvaPlaceApiV1_MultiCreatePlaceV1_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.MultiCreatePlaceV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_OvaPlaceApiV1_MultiCreatePlaceV1_0(ctx context.Context, marshaler runtime.Marshaler, server OvaPlaceApiV1Server, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq MultiCreatePlaceRequestV1
+	var metadata runtime.ServerMetadata
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_OvaPlaceApiV1_MultiCreatePlaceV1_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.MultiCreatePlaceV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_OvaPlaceApiV1_DescribePlaceV1_0(ctx context.Context, marshaler runtime.Marshaler, client OvaPlaceApiV1Client, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq DescribePlaceRequestV1
 	var metadata runtime.ServerMetadata
@@ -306,6 +342,29 @@ func RegisterOvaPlaceApiV1HandlerServer(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_OvaPlaceApiV1_MultiCreatePlaceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ova.place.api.OvaPlaceApiV1/MultiCreatePlaceV1", runtime.WithHTTPPathPattern("/v1/places/multi"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_OvaPlaceApiV1_MultiCreatePlaceV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OvaPlaceApiV1_MultiCreatePlaceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_OvaPlaceApiV1_DescribePlaceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -459,6 +518,26 @@ func RegisterOvaPlaceApiV1HandlerClient(ctx context.Context, mux *runtime.ServeM
 
 	})
 
+	mux.Handle("POST", pattern_OvaPlaceApiV1_MultiCreatePlaceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ova.place.api.OvaPlaceApiV1/MultiCreatePlaceV1", runtime.WithHTTPPathPattern("/v1/places/multi"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_OvaPlaceApiV1_MultiCreatePlaceV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_OvaPlaceApiV1_MultiCreatePlaceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_OvaPlaceApiV1_DescribePlaceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -545,6 +624,8 @@ func RegisterOvaPlaceApiV1HandlerClient(ctx context.Context, mux *runtime.ServeM
 var (
 	pattern_OvaPlaceApiV1_CreatePlaceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "places"}, ""))
 
+	pattern_OvaPlaceApiV1_MultiCreatePlaceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "places", "multi"}, ""))
+
 	pattern_OvaPlaceApiV1_DescribePlaceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "places", "place_id"}, ""))
 
 	pattern_OvaPlaceApiV1_ListPlacesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "places"}, ""))
@@ -556,6 +637,8 @@ var (
 
 var (
 	forward_OvaPlaceApiV1_CreatePlaceV1_0 = runtime.ForwardResponseMessage
+
+	forward_OvaPlaceApiV1_MultiCreatePlaceV1_0 = runtime.ForwardResponseMessage
 
 	forward_OvaPlaceApiV1_DescribePlaceV1_0 = runtime.ForwardResponseMessage
 
